# Stammbaum_FrontEnd

./: .gitignore  .gitmodules  CMakeLists.txt
DATA/: Bloodline.csv  FirstNames.csv  LastNames.csv  People.csv  Relationships.csv  Titles.csv
src/: CMakeLists.txt  mainCLI.cpp  sb_test1.cpp  treeBuilderElement.cpp  treeBuilderElement.h
src/backend/: dataHandler.cpp  dataHandler.h
src/csv_parser/: CMakeLists.txt  csv_parser.cpp  csv_parser.hpp  test.cpp
src/frontend/: MLMSElement.cpp  MLMSElement.h  calculate.cpp  calculate.h  treeBuilderElement.cpp  treeBuilderElement.h
src/utility/: printer.cpp  printer.h  stringCollection.h  types.h  types_parser.cpp  types_parser.hpp
